bad/assign_arr_elem_class_int.example_compiler_output
ERROR
[1mbad/assign_arr_elem_class_int.lat:6:16: [1;31merror: [0;1massigning to `Y` from incompatible type `int`[m
	(new Y[3])[1] = 42;
	              [1;32m^[m
